[metadata]
name = 'algocollection'
version = '0.0.3'
description = 'An algorithm collection'
author = 'Raymond Mendelovits'
author_email = 'raymondmendelovits@gmail.com'
license = 'GPL-3.0-only'
url = 'https://github.com/rmendelovits/algocollection'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
