[metadata]
name = 'algocollection'
version = '1.0.0'
description = 'An algorithm collection'
author = 'Raymond Mendelovits'
author_email = 'raymondmendelovits@gmail.com'
license = 'GPL-3.0-only'
url = 'https://github.com/rmendelovits/algocollection'

[requires]
python_version = ['3.5', '3.6', '3.7', '3.8', '3.9', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
